add docker config DB indx refactor
