# src/routes/taskRoutes.js
@@ -1,13 +1,14 @@
 const express = require("express");
-const { getTasks, addTask, getTaskById, updateTaskData, deleteTask, getTaskByStatus } = require("../controllers/taskController");
+const taskController = require("../controllers/taskController");
 
 const taskRouter = express.Router();
 
-taskRouter.get("/tasks", getTasks);
-taskRouter.post("/task", addTask);
-taskRouter.get("/task/:id", getTaskById);
-taskRouter.post("/task/:id", updateTaskData);
-taskRouter.delete("/task/:id", deleteTask)
-taskRouter.get("/tasks/status/", getTaskByStatus);
+taskRouter.get("/tasks", taskController.getTasks);
+taskRouter.post("/task", taskController.addTask);
+taskRouter.get("/task/:id", taskController.getTaskById);
+taskRouter.post("/task/:id", taskController.updateTaskData);
+taskRouter.delete("/task/:id", taskController.deleteTask)
+taskRouter.get("/tasks/status/", taskController.getTaskByStatus);
+taskRouter.get("/tasks/stats", taskController.getTaskStats)
 
 module.exports = taskRouter;
