# src/swagger-output.json
@@ -162,6 +162,19 @@
           }
         }
       }
+    },
+    "/tasks/stats": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
